# rtc-data

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  HACKING.md  Makefile  README.md  _hack_timestamp.sh  all.sh  buildenv.mk  cbindgen_enclaves.toml  datasystem.mk  docker-compose.yaml  prelude.mk  runall.sh  runbuild.sh  runserver.sh  runtests.sh
.cargo/: config.toml
app/: Cargo.toml  build.rs
app/src/: attestation.rs  data_enclave.rs  main.rs  rtc_enclave.rs
codegen/auth_enclave/: Enclave_t.c  Enclave_t.h  Enclave_u.c  Enclave_u.h  bindings.h  rtc_auth_t.c  rtc_auth_t.h  rtc_auth_u.c  rtc_auth_u.h
codegen/data_enclave/: Enclave_t.c  Enclave_t.h  Enclave_u.c  Enclave_u.h  bindings.h  rtc_data_t.c  rtc_data_t.h  rtc_data_u.c  rtc_data_u.h
codegen/exec_enclave/: bindings.h  rtc_exec_t.c  rtc_exec_t.h  rtc_exec_u.c  rtc_exec_u.h
edl/: rtc_tenclave.edl
enclave/: Cargo.toml  Enclave.edl  Makefile
enclave/src/: lib.rs  rsa3072.rs
rtc_app_backend/: Cargo.toml
rtc_app_backend/src/: config.rs  main.rs  models.rs
rtc_auth_enclave/: Cargo.toml  Enclave.edl  Makefile  build.rs  rtc_auth.edl  rust-toolchain
rtc_auth_enclave/src/: jwt.rs  lib.rs  token_store.rs
rtc_auth_enclave/src/ecalls/: mod.rs  save_access_key.rs  save_access_key_impl.rs
rtc_data_enclave/: Cargo.toml  Enclave.edl  Makefile  build.rs  rtc_data.edl  rust-toolchain
rtc_data_enclave/src/: crypto.rs  data_upload.rs  key_management.rs  lib.rs  ocalls.rs  rsa3072.rs
rtc_data_enclave/src/ocalls/: mod.rs  save_access_key_impl.rs  save_sealed_blob_impl.rs
rtc_data_service/: Cargo.toml  build.rs
rtc_data_service/config/: development.toml
rtc_data_service/http_server/: Cargo.toml  build.rs
rtc_data_service/http_server/config/: default.toml  development.toml  production.toml
rtc_data_service/http_server/src/: main.rs  tls.rs
rtc_data_service/src/: actix.rs  app_config.rs  attestation.rs  auth_enclave_actor.rs  config.rs  data_enclave_actor.rs  enclave_actor.rs  enclave_messages.rs  exec_enclave_actor.rs  handlers.rs  lib.rs  main.rs  merge_error.rs  validation.rs
rtc_data_service/src/attestation/: message.rs  service.rs
rtc_data_service/src/data_upload/: message.rs  mod.rs  service.rs
rtc_data_service/src/exec/: message.rs  service.rs
rtc_data_service/src/exec_token/: message.rs  service.rs
rtc_data_service/tests/: attestation.rs  data_upload.rs  exec_token.rs  main.rs  server.rs
rtc_data_service/tests/ecalls/: issue_execution_token.rs  local_attestation.rs  mod.rs  save_access_key.rs
rtc_data_service/tests/helpers/: mod.rs  types.rs
rtc_data_service/tests/snapshots/: server__auth_service_attestation_ok-2.snap  server__data_service_attestation_ok.snap.new
rtc_data_service/tests/web_api/: attestation.rs  data_upload.rs  exec.rs  exec_token.rs  mod.rs
rtc_data_service/tests/web_api/snapshots/: main__web_api__attestation__auth_service_attestation_ok.snap  main__web_api__attestation__exec_service_attestation_ok-2.snap  main__web_api__attestation__exec_service_attestation_ok.snap
rtc_exec_enclave/: Cargo.toml  Makefile  build.rs  rtc_exec.edl
rtc_exec_enclave/src/: lib.rs  sample_functions.rs  types.rs
rtc_tenclave/: Cargo.toml
rtc_tenclave/src/: crypto.rs  enclave.rs  lib.rs  util.rs
rtc_tenclave/src/dh/: mod.rs  protected_channel.rs  sealing.rs  sessions.rs  types.rs
rtc_tenclave/src/kv_store/: fs.rs  in_memory.rs  inspect.rs  mod.rs  sgxfs.rs  tests.rs
rtc_tenclave/src/kv_store/fs/: inspect.rs  mod.rs  sgx_filer.rs  std_filer.rs
rtc_types/: Cargo.toml
rtc_types/src/: attestation.rs  binhelpers.rs  data_upload.rs  dh.rs  ecall_result.rs  enclave_messages.rs  exec_token.rs  lib.rs
rtc_types/src/byte_formats/: mod.rs  rkyv_format.rs
rtc_types/src/enclave_messages/: errors.rs  ffi_set_access_key.rs  mod.rs  set_access_key.rs
rtc_udh/: Cargo.toml
rtc_udh/src/: lib.rs  responder.rs
rtc_uenclave/: Cargo.toml
rtc_uenclave/auth-sys/: Cargo.toml  build.rs  wrapper.h
rtc_uenclave/auth-sys/src/: lib.rs
rtc_uenclave/data-ocalls/: Cargo.toml
rtc_uenclave/data-ocalls/src/: lib.rs  save_access_key.rs  save_sealed_blob.rs
rtc_uenclave/data-sys/: Cargo.toml  build.rs  wrapper.h
rtc_uenclave/data-sys/src/: lib.rs
rtc_uenclave/exec-sys/: Cargo.toml  build.rs  wrapper.h
rtc_uenclave/exec-sys/src/: lib.rs
rtc_uenclave/rtc-ecalls/: Cargo.toml
rtc_uenclave/rtc-ecalls/src/: lib.rs
rtc_uenclave/src/: azure_attestation.rs  ecalls.rs  http_client.rs  lib.rs  quote.rs  rtc_enclave.rs
rtc_uenclave/src/enclaves/: mod.rs  rtc_auth.rs  rtc_data.rs  rtc_exec.rs
