[workspace]
members = [
    "rtc_data_service",
    "rtc_data_service/http_server",
    "rtc_types",
    "rtc_uenclave",
    "rtc_uenclave/data-ocalls",
    "rtc_uenclave/data-sys",
    "rtc_uenclave/auth-sys",
    "rtc_uenclave/rtc-ecalls",
]
# TODO: Look at creating a seperate workspace for enclave code to share lockfile?
exclude = [
    "rtc_auth_enclave",
    "rtc_data_enclave",
    "rtc_tenclave",
]

# See "Pinning SGX dependencies" in HACKING.md
[patch."https://github.com/apache/teaclave-sgx-sdk.git"]
sgx_tstd = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", rev = "b9d1bda" }
