[package]
name = "rtc_data_service"
version = "0.0.1"
authors = ["Registree"]
build = "build.rs"

[dependencies]
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.3" }
sgx_urts = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.3" }
mockall_double = { version = "0.2.0", features = ["nightly"] }

[dev-dependencies]
mockall = { version = "0.9.1", features = ["nightly"] }

[features]
test = []