[package]
name = "rtc_auth_enclave"
version = "0.1.0"
authors = ["Registree"]
edition = "2018"

[lib]
name = "enclave"
path = "src/lib.rs"
crate-type = ["staticlib"]

[build-dependencies]
cc = "1.0.67"
cbindgen = "0.19.0"

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["extra_traits"]}
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["backtrace"] , rev = "v1.1.3" }
rtc_types = { path = "../rtc_types", features = ["teaclave_sgx"]}

[dependencies]
rtc_tenclave = { path = "../rtc_tenclave" }

[patch."https://github.com/apache/teaclave-sgx-sdk.git"]
sgx_types = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git" }
sgx_tcrypto = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git" }
sgx_alloc = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git" }
sgx_tstd = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git" }
