[package]
name = "rtc_data_enclave"
version = "0.0.1"
authors = ["Registree"]
edition = "2018"

[lib]
name = "enclave"
path = "src/lib.rs"
crate-type = ["staticlib"]

[build-dependencies]
cc = "1.0.67"
cbindgen = "0.19.0"

[features]
default = []

# See "Pinning SGX dependencies" in HACKING.md
[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tcrypto = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", rev = "b9d1bda" }
sgx_types = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", rev = "b9d1bda", features = ["extra_traits"] }
sgx_tstd = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", rev = "b9d1bda", features = ["backtrace"] }
sgx_trts = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", rev = "b9d1bda" }
sgx_tse = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", rev = "b9d1bda" }
sgx_crypto_helper = { package = "sgx_tcrypto_helper", git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", rev = "b9d1bda" }
sgx_tunittest = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", rev = "b9d1bda" }
sgx_tseal = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", rev = "b9d1bda" }

rtc_types = { path = "../rtc_types", features = ["teaclave_sgx"] }
rtc_tenclave = { path = "../rtc_tenclave" }

[dependencies]
# XXX: See comment about serde-sgx dependency versioning in rtc_tenclave/Cargo.toml
serde_derive = { git = "https://github.com/mesalock-linux/serde-sgx" }
serde = { git = "https://github.com/mesalock-linux/serde-sgx", features = ["derive"]}
bincode = { git = "https://github.com/mesalock-linux/bincode-sgx.git" }
serde-big-array = { git = "https://github.com/mesalock-linux/serde-big-array-sgx" }
simple_asn1 = { git = "https://github.com/mesalock-linux/simple_asn1-sgx.git" }
thiserror = { git = "https://github.com/mesalock-linux/thiserror-sgx.git" }
uuid = { git = "https://github.com/mesalock-linux/uuid-sgx", features = ["v4"] }
rand = { git = "https://github.com/mesalock-linux/rand-sgx", tag = "v0.7.3_sgx1.1.3" }
# No Std Dependencies
zeroize = "1.2.0"
secrecy = { version = "0.7.0", default-features = false }
ring = { version = "0.17.0-alpha.8", default-features = false }
sodalite = { version = "0.4.0", default-features = false }

[patch."https://github.com/apache/teaclave-sgx-sdk.git"]
sgx_tstd = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", rev = "b9d1bda" }

# getrandom-sgx: https://github.com/mesalock-linux/getrandom-sgx/blob/sgx_1.1.3/Cargo.toml#L21-L24
sgx_libc = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", rev = "b9d1bda" }
sgx_trts = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", rev = "b9d1bda" }

# sgx_crypto_helper:https://github.com/apache/incubator-teaclave-sgx-sdk/blob/v1.1.3/sgx_crypto_helper/Cargo.toml#L41-L44
sgx_tcrypto = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", rev = "b9d1bda" }
sgx_types = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", rev = "b9d1bda" }
