[package]
name = "rtc_data_service"
version = "0.0.1"
authors = ["Registree"]
edition = "2018"

[lib]
crate-type = ["rlib"]

[dependencies]
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["extra_traits"] }
sgx_urts = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.3" }
mockall_double = { version = "0.2.0", features = ["nightly"] }
thiserror = "1.0.24"
base64 = "0.13.0"
actix-web = "4.0.0-beta.5"
actix = "0.11"
serde = { version = "1.0.125", features = ["derive"] }
config = "0.11.0"
rtc_uenclave = { path = "../rtc_uenclave" }
rtc_types = { path = "../rtc_types" }
serde_json = "1.0.64"
actix-rt = "2.2.0"
cfg-if = "1.0.0"

[dev-dependencies]
rand = "0.7.3"
mockall = { version = "0.9.1", features = ["nightly"] }
proptest = "1.0.0"
num-bigint = { version = "0.4.0", features = ["rand"] }
num-traits = "0.2"
# This should be removed once the rust-crypto rsa crate updates with export functionality
simple_asn1 = { version = "0.5.1" }
insta = "1.7.1"
sodalite = "0.4.0"

[features]
test = []

[build-dependencies]
cc = "1.0.67"
