[package]
name = "rtc_tenclave"
version = "0.1.0"
authors = ["Herman <herman@registree.io>"]
edition = "2018"

[lib]
# Doctests cause any cfg(test) attribute to fail, and since we depend on that
# attribute for unit testing, this seems to be the easiest way around this issue
doctest = false
crate-type = ["lib"]

[features]
default = ["sgx_tstd", "sgx_tse", "rtc_types/teaclave_sgx", "rand", "thiserror"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# default
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["backtrace"] , rev = "v1.1.3", optional = true }
sgx_tse = { git = "https://github.com/apache/teaclave-sgx-sdk.git" , rev = "v1.1.3", optional = true }
rand = { git = "https://github.com/mesalock-linux/rand-sgx", tag = "v0.7.3_sgx1.1.3", optional = true }
thiserror = { git = "https://github.com/mesalock-linux/thiserror-sgx.git", optional = true }

rtc_types = { path = "../rtc_types" }
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["extra_traits"]}

# No Std Dependencies
zeroize = "1.2.0"
secrecy = { version = "0.7.0", default-features = false }
ring = { version = "0.17.0-alpha.8", default-features = false }
sodalite = { version = "0.4.0", default-features = false }
cfg-if = "1.0.0"


[dev-dependencies]
thiserror_std = { package = "thiserror", version = "1.0.9" }
rand_std = { package = "rand", version = "0.7.3" }


[patch."https://github.com/apache/teaclave-sgx-sdk.git"]
sgx_types = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git" }
