[package]
name = "rtc_tenclave"
version = "0.1.0"
authors = ["Herman <herman@registree.io>"]
edition = "2018"

[lib]
# Doctests cause any cfg(test) attribute to fail, and since we depend on that
# attribute for unit testing, this seems to be the easiest way around this issue
doctest = false
crate-type = ["lib"]

[features]
default = ["sgx_tstd", "sgx_tse", "rtc_types/teaclave_sgx", "rand", "thiserror", "sgx_tcrypto", "serde", "serde_json"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# default
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["backtrace"] , rev = "v1.1.3", optional = true }
sgx_tse = { git = "https://github.com/apache/teaclave-sgx-sdk.git" , rev = "v1.1.3", optional = true }
rand = { git = "https://github.com/mesalock-linux/rand-sgx", tag = "v0.7.3_sgx1.1.3", optional = true }
thiserror = { git = "https://github.com/mesalock-linux/thiserror-sgx.git", optional = true }
sgx_tcrypto = { git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

# XXX: Work around serde-json-sgx / Cargo version handling issue
#
# We want to specify tag = "sgx_1.1.3" for the serde dependency here,
# but this makes Cargo resolve the dependency to a different crate
# version identity than what serde-json-sgx's dependency resolves to,
# even though both "master" and "sgx_1.1.3" point to same git revision.
#
# This causes build failures due to serde_json referring to a different
# versions of the Serialize / Deserialize traits than this project's code.
#
# We cannot use [patch] to override serde-json-sgx's dependency to use
# the same tag for serde-sgx as here, because of this Cargo limitation:
#
# * "Cannot patch underspecified git dependency"
#   https://github.com/rust-lang/cargo/issues/7670
#
#   Comment: https://github.com/rust-lang/cargo/issues/7670#issuecomment-841722488
#
# To work around this problem, the git reference here must match
# the upstream dependency line exactly:
#
# * https://github.com/mesalock-linux/serde-json-sgx/blob/sgx_1.1.3/Cargo.toml#L17
#
serde = { git = "https://github.com/mesalock-linux/serde-sgx", optional = true }

serde_json = { git = "https://github.com/mesalock-linux/serde-json-sgx", tag = "sgx_1.1.3", optional = true }

rtc_types = { path = "../rtc_types" }
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["extra_traits"]}

# No Std Dependencies
zeroize = "1.2.0"
secrecy = { version = "0.7.0", default-features = false }
ring = { version = "0.17.0-alpha.8", default-features = false }
sodalite = { version = "0.4.0", default-features = false }
cfg-if = "1.0.0"


[dev-dependencies]
thiserror_std = { package = "thiserror", version = "1.0.9" }
rand_std = { package = "rand", version = "0.7.3" }
sgx_ucrypto = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
serde_std = { package = "serde", version = "1.0.0" }
serde_json_std = { package = "serde_json", version = "1.0.0" }

proptest = "1.0.0"


[patch."https://github.com/apache/teaclave-sgx-sdk.git"]
sgx_types = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git" }
