[package]
name = "rtc_types"
version = "0.1.0"
authors = ["Herman <herman@registree.io>"]
edition = "2018"

[lib]
crate-type = ["staticlib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["thiserror"]
teaclave_sgx = ["thiserror_sgx", "sgx_tstd"]

# See "Pinning SGX dependencies" in HACKING.md
[dependencies]
sgx_types = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", rev = "b9d1bda", features = ["extra_traits"] }
rkyv = { version = "0.6.6", features = ["const_generics", "strict"], default_features = false }

# default
thiserror = { version = "1.0.24", optional = true}

# teaclave_sgx
thiserror_sgx = { git = "https://github.com/mesalock-linux/thiserror-sgx.git", package = "thiserror", optional = true }
sgx_tstd = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", rev = "b9d1bda", features = ["backtrace"], optional = true }
