[package]
name = "rtc_types"
version = "0.1.0"
authors = ["Herman <herman@registree.io>"]
edition = "2018"

[lib]
crate-type = ["staticlib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["thiserror"]
teaclave_sgx = ["thiserror_sgx", "sgx_tstd"]

# See "Pinning SGX dependencies" in HACKING.md
[dependencies]
sgx_types = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", rev = "b9d1bda", features = ["extra_traits"] }

# This should be branch = "0.7.0", but 6d8adb180adaa1bf80028f9029d85e887f099b9b intruduces a `std` regression in `rkyv/src/core_impl/primitive.rs`
# no_std validation: https://github.com/djkoloski/rkyv/issues/107
# https://github.com/djkoloski/rkyv/commits/0.7.0
# https://github.com/djkoloski/rkyv/commit/6d8adb180adaa1bf80028f9029d85e887f099b9b#diff-ff3ca14deb34cdee57667b1f03d1115bc663b0b7569edf18d061881ed9e5b7d6
rkyv = { git = "https://github.com/djkoloski/rkyv.git", rev = "fb118b73f57032f54502edcc66b64e0857bc83fa", features = ["strict", "validation"], default_features = false }

# default
thiserror = { version = "1.0.24", optional = true}

# teaclave_sgx
thiserror_sgx = { git = "https://github.com/mesalock-linux/thiserror-sgx.git", package = "thiserror", optional = true }
sgx_tstd = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", rev = "b9d1bda", features = ["backtrace"], optional = true }
