[package]
name = "data-ocalls"
version = "0.1.0"
authors = ["Herman <herman@registree.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# See "Pinning SGX dependencies" in HACKING.md
[dependencies]
sgx_types = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", rev = "b9d1bda", features = ["extra_traits"] }

rtc_types = { path = "../../rtc_types" }
uuid = "0.8.2"
