[package]
name = "data-sys"
version = "0.1.0"
authors = ["Herman <herman@registree.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.3", features = ["extra_traits"] }
rtc_types = {path = "../../rtc_types"}

[build-dependencies]
cc = "1.0.67"
bindgen = "0.58.1"
